--- a/password generator/style.css
+++ b/password generator/style.css
@@ -11,9 +11,13 @@ span{
     color: chartreuse;
     border-bottom: 5px solid chartreuse;
 }
-input{
-    font-size: 20px;
+#box{
+    font-size: 17px;
     border: 0;
+    width: 275px;
+}
+#counter{
+    font-size: 20px;
 }
 input:focus{
     border: 0;
@@ -21,5 +25,7 @@ input:focus{
 img{
     width: 50px;
     border: 1px solid black;
+    user-select: none;
     margin: 10px;
+    cursor: pointer;
 }
